--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,11 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+
+
   firebase_analytics: ^0.3.3
+
+  cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
