--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,9 @@ dependencies:
     sdk: flutter
 
 
-  firebase_analytics: ^0.3.3
 
-  cloud_firestore:
+
+  cloud_firestore: ^0.7.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
