//TODO auth impl

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ dependencies:
 
 
 
-
+  # Firebase packages
   cloud_firestore:
   firebase_storage:
+  firebase_auth:
+  google_sign_in:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
