--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,10 @@ dependencies:
 
 
   # Firebase packages
-  cloud_firestore:
-  firebase_storage:
-  firebase_auth:
-  google_sign_in:
+  cloud_firestore: ^0.7.4
+  firebase_storage: ^1.0.1
+  firebase_auth: ^0.5.18
+  google_sign_in: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
