--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,15 @@ dependencies:
     sdk: flutter
 
 
+  intl: ^0.15.7
 
   # Firebase packages
   cloud_firestore: ^0.7.4
   firebase_storage: ^1.0.1
   firebase_auth: ^0.5.18
   google_sign_in: ^3.0.0
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
