--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,18 @@ dependencies:
 
 
   intl: ^0.15.7
+  http: ^0.11.3
+
 
   # Firebase packages
   cloud_firestore: ^0.7.4
   firebase_storage: ^1.0.1
   firebase_auth: ^0.5.18
   google_sign_in: ^3.0.0
+  cloud_functions: ^0.0.2
+  googleapis: any
+  googleapis_auth: any
+
 
 
 
