--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
 
   intl: ^0.15.7
   http: ^0.11.3
+  connectivity: ^0.3.1
 
 
   # Firebase packages
@@ -80,7 +81,7 @@ flutter:
   - asset/images/internet.png
   - asset/images/intervento_bg.png
   - asset/images/preventivo_bg.png
-  - asset/images/sms.png
+  #- asset/images/sms.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
