--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,17 +33,12 @@ dependencies:
   # To use camera in the app
   image_picker:
 
-  # To send photo
-  mailer3:
-
   #to use Whatsapp
-  flutter_launch:
-
+  #flutter_launch:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -81,7 +76,7 @@ flutter:
   - asset/images/internet.png
   - asset/images/intervento_bg.png
   - asset/images/preventivo_bg.png
-  #- asset/images/sms.png
+  - asset/images/sms.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
