--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,17 +6,17 @@ dependencies:
     sdk: flutter
 
 
-  intl: ^0.15.7
-  http: ^0.11.3
-  connectivity: ^0.3.1
+  intl:
+  http:
+  connectivity:
 
 
   # Firebase packages
-  cloud_firestore: ^0.7.4
-  firebase_storage: ^1.0.1
-  firebase_auth: ^0.5.18
-  google_sign_in: ^3.0.0
-  cloud_functions: ^0.0.2
+  cloud_firestore:
+  firebase_storage:
+  firebase_auth:
+  google_sign_in:
+  cloud_functions:
   googleapis: any
   googleapis_auth: any
 
