--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,6 @@
+
 # Uncomment this line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -19,15 +20,13 @@ def parse_KV_file(file, separator='=')
         path = plugin[1].strip()
         podpath = File.expand_path("#{path}", file_abs_path)
         pods_ary.push({:name => podname, :path => podpath});
-      else
-        puts "Invalid plugin specification: #{line}"
-      end
+end
   }
   return pods_ary
 end
 
 target 'Runner' do
-  use_frameworks!
+  #use_frameworks!
 
   # Prepare symlinks folder. We use symlinks to avoid having Podfile.lock
   # referring to absolute paths on developers' machines.
