--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   intl: ^0.15.7
